--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -10,12 +10,12 @@ body {
   margin: 0;
 }
 
-.bg-img {
+/* .bg-img {
   background-image: url('./assets/desktop.jpg');
   background-size: 100%;
   width: 100%;
   height: 100vh;
-}
+} */
 
 .vh-100 {
   width: 100%;
