--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,28 @@
+<header>{{title}}</header>
+
 <router-outlet></router-outlet>
 
+<mat-divider></mat-divider>
 
-<!-- <mat-divider></mat-divider> -->
-
-<footer>
-  footer
+<footer class="container-fluid row py-5">
+  <section class="col-sm-12 col-md-8">
+    <div class="d-flex justify-content-start">
+      <section class="col-sm-12 mr-4">
+        <fa-icon [icon]="faAnchor"></fa-icon> Others
+        <ul class="list-unstyled small">
+          <li><a routerLink="/bus">Bus-Arrival</a></li>
+          <li><a routerLink="/dict">Dictionary</a></li>
+          <li><a href="https://mail.insg.xyz">Email</a></li>
+        </ul>
+      </section>
+    </div>
+  </section>
+  <section class="col-sm-12 col-md-4 text-center">
+    <div>We <fa-icon [icon]="faHeart" class="text-danger"></fa-icon> InSG</div>
+    <div class="small">Copyright &copy; 2019. All rights reserved.</div>
+    <div>
+      <img src="/assets/sg_round_icon_128x96.png" alt="Singapore flag" class="icon-25" />
+      Singapore
+    </div>
+  </section>
 </footer>
