--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header>{{title}}</header>
+here
 
 <router-outlet></router-outlet>
 
@@ -10,16 +10,17 @@
       <section class="col-sm-12 mr-4">
         <fa-icon [icon]="faAnchor"></fa-icon> Others
         <ul class="list-unstyled small">
-          <li><a routerLink="/bus">Bus-Arrival</a></li>
-          <li><a routerLink="/dict">Dictionary</a></li>
-          <li><a href="https://mail.insg.xyz">Email</a></li>
+          <li><a routerLink="/">Home</a></li>
+          <!-- <li><a routerLink="/bus-arrival">BusArrival</a></li> -->
+          <li><a routerLink="/dictionary">Dictionary</a></li>
+          <!-- <li><a href="https://mail.insg.xyz">Email</a></li> -->
         </ul>
       </section>
     </div>
   </section>
   <section class="col-sm-12 col-md-4 text-center">
     <div>We <fa-icon [icon]="faHeart" class="text-danger"></fa-icon> InSG</div>
-    <div class="small">Copyright &copy; 2019. All rights reserved.</div>
+    <!-- <div class="small">Copyright &copy; 2019. All rights reserved.</div> -->
     <div>
       <img src="/assets/sg_round_icon_128x96.png" alt="Singapore flag" class="icon-25" />
       Singapore
