--- a/client/src/app/shared/go-back-button/go-back-button.component.html
+++ b/client/src/app/shared/go-back-button/go-back-button.component.html
@@ -1,5 +1,5 @@
-<p>go-back-button works!</p>
-<!-- 
-<button mat-icon-button (click)="goBack()" matTooltip="Go back" color="primary" class="px-3">
-    <fa-icon icon="chevron-left"></fa-icon>
-  </button> -->
+<button *ngIf="word" mat-flat-button (click)="goBack()">{{word}}</button>
+
+<button *ngIf="!word" mat-icon-button (click)="goBack()" matTooltip="Go back" color="primary" class="px-3">
+  <fa-icon icon="chevron-left"></fa-icon>
+</button>
