--- a/client/src/app/bus-arrival/bus-status/bus-status.component.html
+++ b/client/src/app/bus-arrival/bus-status/bus-status.component.html
@@ -41,15 +41,16 @@
         <li>LSD: limited standing</li>
       </ul>
     </div>
-
+    <div class="text-center">
+      <div>
+        <button *ngIf="!errMsg && !existingBookmark" mat-flat-button color="primary" (click)="addBusStopBookmark()"
+          class="my-3">
+          Bookmark this Bus Stop
+        </button>
+      </div>
+    </div>
   </div>
   <div class="text-center">
-    <div>
-      <button *ngIf="!errMsg && !existingBookmark" mat-flat-button color="primary" (click)="addBusStopBookmark()"
-        class="my-3">
-        Bookmark this Bus Stop
-      </button>
-    </div>
     <div>
       <button mat-flat-button color="primary" (click)="getBusArrival()" class="my-3">
         Refresh
