--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,6 @@
-<router-outlet></router-outlet>
+<div style="min-height: 70vh">
+  <router-outlet></router-outlet>
+</div>
 
 <mat-divider></mat-divider>
 
