--- a/client/src/app/dictionary/dictionary.component.html
+++ b/client/src/app/dictionary/dictionary.component.html
@@ -1,4 +1,4 @@
-<div class="bg-light">
+<div class="">
   <section class="container py-4">
     <mat-card>
       <mat-card-title class="mt-3 mb-4 row d-flex justify-content-center">
