--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -13,6 +13,7 @@
           <li><a routerLink="/">Home</a></li>
           <!-- <li><a routerLink="/bus-arrival">BusArrival</a></li> -->
           <li><a routerLink="/dictionary">Dictionary</a></li>
+          <li><a routerLink="/words">Words</a></li>
           <!-- <li><a href="https://mail.insg.xyz">Email</a></li> -->
         </ul>
       </section>
