--- a/client/src/app/words/words.component.html
+++ b/client/src/app/words/words.component.html
@@ -1,1 +1,14 @@
-<p>words works!</p>
+<div class="container">
+
+  <h2 class="mt-3">Frequent Used Words</h2>
+  <div class="tiny mb-5">word (frequence weight)</div>
+  <div class="row">
+    <div *ngFor="let word of words" class="col-sm-5 col-md-3">
+      {{word.word}} ({{word.frequence}})
+    </div>
+  </div>
+
+  <mat-paginator [length]="wordsTotal" [pageSize]="size" [pageSizeOptions]="100"
+    (page)="pageEvent=refreshWords($event)">
+  </mat-paginator>
+</div>
