--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -5,9 +5,9 @@
 <mat-divider></mat-divider>
 
 <footer class="container-fluid row py-5">
-  <section class="col-sm-12 col-md-8">
+  <section class="col-12 col-md-8">
     <div class="d-flex justify-content-start">
-      <section class="col-sm-12 mr-4">
+      <section class="col-12 mr-4">
         <fa-icon [icon]="faAnchor"></fa-icon> Others
         <ul class="list-unstyled small">
           <li><a routerLink="/">Home</a></li>
@@ -19,7 +19,7 @@
       </section>
     </div>
   </section>
-  <section class="col-sm-12 col-md-4 text-center">
+  <section class="col-12 col-md-4 text-center">
     <div>We <fa-icon [icon]="faHeart" class="text-danger"></fa-icon> InSG</div>
     <!-- <div class="small">Copyright &copy; 2019. All rights reserved.</div> -->
     <div>
