--- a/client/src/app/dictionary/dictionary.component.html
+++ b/client/src/app/dictionary/dictionary.component.html
@@ -2,13 +2,13 @@
   <section class="container py-4">
     <mat-card>
       <mat-card-title class="mt-3 mb-4 row d-flex justify-content-center">
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-12 col-md-6 col-lg-4">
           <img src="/assets/oxford/PBO_blue-10359bc2ad64e89d.png" class="w-100" />
         </div>
       </mat-card-title>
       <mat-card-content class="container">
         <div class="mb-4 row d-flex justify-content-center">
-          <div class="col-sm-12 col-md-6 col-lg-4 input-group">
+          <div class="col-12 col-md-6 col-lg-4 input-group">
             <input #oxfordInput type="text" class="form-control" (keyup.enter)="getOxfordDefinition(oxfordInput.value)"
               placeholder="word to check" />
             <div class="input-group-append">
