--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,12 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import url('bootstrap.min.css');
+@import url("bootstrap.min.css");
 
 html,
 body {
   height: 100%;
   margin: 0;
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 .icon-25 {
@@ -23,4 +23,8 @@ h1,
 h2,
 h3 {
   font-weight: bold;
+}
+
+* {
+  border: 1 dashed black;
 }
