--- a/client/src/app/words/words.component.html
+++ b/client/src/app/words/words.component.html
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="container-fluid">
 
   <h2 class="mt-3">Frequent Used Words</h2>
   <div class="tiny mb-5">word (frequence weight)</div>
   <div class="row">
-    <div *ngFor="let word of words" class="col-sm-6 col-md-3">
+    <div *ngFor="let word of words" class="col-6 col-md-4 col-lg-3">
       {{word.word}} ({{word.frequence}})
     </div>
   </div>
